--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_2/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Custom Portfolio</h2>
-                <p class="mb-0">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Understanding of PNGs and JPGs.</p>
+                <h2 class="bg-dark text-white">Custom Portfolio</h2>
+                <p class="mb-0 bg-dark text-white">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Understanding of PNGs and JPGs.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project1.png" alt="">
@@ -108,8 +108,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_3/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Newsletter Signup</h2>
-                <p class="mb-0">Mobile-first responsive registration form built with HTML and CSS.</p>
+                <h2 class="bg-dark text-white">Newsletter Signup</h2>
+                <p class="mb-0 bg-dark text-white">Mobile-first responsive registration form built with HTML and CSS.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project2.png" alt="">
@@ -119,8 +119,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_4/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Sass Test Site</h2>
-                <p class="mb-0">Built with HTML and CSS(SCSS). Converted CSS into Sass partial files. Repeated values stored in Sass variables. Developed a Sass micro-framework.</p>
+                <h2 class="bg-dark text-white">Sass Test Site</h2>
+                <p class="mb-0 bg-dark text-white">Built with HTML and CSS(SCSS). Converted CSS into Sass partial files. Repeated values stored in Sass variables. Developed a Sass micro-framework.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project3.png" alt="">
@@ -130,8 +130,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_6/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Hangman Game</h2>
-                <p class="mb-0">A word guessing game with on-screen keyboard and random phrases. Used JavaScript, HTML, and CSS. Player can guess until they make five wrong guesses.</p>
+                <h2 class="bg-dark text-white">Hangman Game</h2>
+                <p class="mb-0 bg-dark text-white">A word guessing game with on-screen keyboard and random phrases. Used JavaScript, HTML, and CSS. Player can guess until they make five wrong guesses.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project4.png" alt="">
@@ -141,8 +141,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_7-reuploaded/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Information Dashboard</h2>
-                <p class="mb-0">A well-designed and visually appealing web dashboard, using JavaScript-driven charts and graphs. HTML, CSS, and JavaScript built from the ground up.</p>
+                <h2 class="bg-dark text-white">Information Dashboard</h2>
+                <p class="mb-0 bg-dark text-white">A well-designed and visually appealing web dashboard, using JavaScript-driven charts and graphs. HTML, CSS, and JavaScript built from the ground up.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project5.png" alt="">
@@ -152,8 +152,8 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_8/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Employee Directory</h2>
-                <p class="mb-0">Implemented the Random User Generator API to create 12 random "employees". Used HTML, CSS, JavaScript, with an understanding of APIs and JSON objects.</p>
+                <h2 class="bg-dark text-white">Employee Directory</h2>
+                <p class="mb-0 bg-dark text-white">Implemented the Random User Generator API to create 12 random "employees". Used HTML, CSS, JavaScript, with an understanding of APIs and JSON objects.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project6.png" alt="">
