--- a/index.html
+++ b/index.html
@@ -210,13 +210,37 @@ contracts, full-time and part-time positions, as well as internships, freelance 
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link text-white mr-3" href="Terminal 5304#2240" target="_blank">
-            <i><svg xmlns="http://www.w3.org/2000/svg"
-              aria-label="Discord" role="img"
-              viewBox="0 0 512 512"
-              fill="#7289da"><rect
-              width="512" height="512"
-              rx="15%"/><path d="m346 392-21-25c41-11 57-39 57-39-52 49-194 51-249 0 0 0 14 26 56 39l-23 25c-70-1-97-48-97-48 0-104 46-187 46-187 47-33 90-33 90-33l3 4c-58 16-83 42-83 42 68-46 208-42 263 0 1-1-33-28-86-42l5-4s43 0 90 33c0 0 46 83 46 187 0 0-27 47-97 48z" fill="#fff"/><ellipse cx="196" cy="279" rx="33" ry="35"/><ellipse cx="312" cy="279" rx="33" ry="35"/></svg></i>
+          <a class="social-link text-white mr-3" href="https://www.reddit.com/user/terminal5304" target="_blank">
+            <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Reddit" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#f40"/><g fill="#fff"><ellipse cx="256" cy="307" rx="166" ry="117"/><circle cx="106" cy="256" r="42"/><circle cx="407" cy="256" r="42"/><circle cx="375" cy="114" r="32"/></g><g stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="m256 196 23-101 73 15" stroke="#fff" stroke-width="16"/><path d="m191 359c33 25 97 26 130 0" stroke="#f40" stroke-width="13"/></g><g fill="#f40"><circle cx="191" cy="287" r="31"/><circle cx="321" cy="287" r="31"/></g></svg></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="https://soundcloud.com/user-481420112" target="_blank">
+            <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="SoundCloud" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#f50"/><path d="m59 270-3 22 3 22c0 2 3 2 3 0l3-22-3-22c0-3-3-3-3 0zm18-14c0-3-3-3-3 0l-5 36 4 35c0 3 4 3 4 0l4-35zm59-30-3 66 2 40c0 8 7 8 7 0l4-40-4-66c0-5-6-5-6 0zm-31 22-4 44 3 40c0 6 5 6 5 0l4-40-4-44c0-3-4-3-4 0zm70 84 3-40-3-88c0-6-7-6-7 0l-3 88 2 40c0 8 8 8 8 0zm68 0 2-40-2-102c0-7-10-7-10 0l-2 102 2 40c0 8 10 8 10 0zm-34 0 3-40-3-89c0-6-9-6-9 0l-2 89 2 40c0 8 9 8 9 0zm-83 0 3-40-3-41c0-3-6-3-6 0l-3 41 3 40c0 7 6 7 6 0zm-33 0 4-40-4-43c0-3-4-3-4 0l-4 43 4 40c0 4 4 4 4 0zm124-125-2 85 1 40c0 8 10 8 10 0l2-40-2-85c0-7-9-7-9 0zm-58 125 3-40-3-81c0-6-7-6-7 0l-3 81 2 40c0 8 8 8 8 0zm33 0 3-40-3-91c0-6-8-6-8 0l-3 91 3 40c0 8 8 8 8 0zm196-89c-5-57-64-94-118-73-4 2-5 3-5 6v156c0 3 2 6 5 6h137c27 0 49-22 49-49 0-37-35-57-68-46zm-138-62-3 111 3 40c0 8 10 8 10 0l3-40-3-111c0-7-10-7-10 0z" fill="#fff"/></svg></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="https://steamcommunity.com/profiles/76561198076037738/" target="_blank">
+            <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Steam" role="img"
+                viewBox="0 0 512 512"
+                fill="#ebebeb"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#231f20"/><path d="m183 280 41 28 27 41 87-62-94-96"/><circle cx="340" cy="190" r="49"/><g fill="none" stroke="#ebebeb"><circle cx="179" cy="352" r="63" stroke-width="19"/><path d="m-18 271 195 81" stroke-width="80" stroke-linecap="round"/><circle cx="340" cy="190" r="81" stroke-width="32"/></g></svg></i>
           </a>
         </li>
       </ul>
