--- a/index.html
+++ b/index.html
@@ -170,6 +170,24 @@
                   viewBox="0 0 512 512"><path fill="#e34f26" d="M71 460L30 0h451l-41 460-185 52"/><path fill="#ef652a" d="M256 472l149-41 35-394H256"/><path fill="#ebebeb" d="M256 208h-75l-5-58h80V94H114l15 171h127zm-1 147l-63-17-4-45h-56l7 89 116 32z"/><path fill="#fff" d="M255 208v57h70l-7 73-63 17v59l116-32 16-174zm0-114v56h137l5-56z"/></svg></i>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Git" role="img"
+                  viewBox="0 0 512 512">
+                  <rect width="512" height="512" rx="15%" fill="#fff"/>
+                  <path fill="#f05133" d="M440.8 238.9L273 71.2a24.7 24.7 0 0 0-35 0l-34.8 34.9 44.2 44.1a29.4 29.4 0 0 1 37.2 37.5l42.5 42.5a29.4 29.4 0 1 1-17.6 16.6l-39.7-39.7v104.5a29.4 29.4 0 1 1-24.2-.9V205.3a29.4 29.4 0 0 1-16-38.6l-43.5-43.5-115 115a24.7 24.7 0 0 0 0 34.9L239 440.8a24.7 24.7 0 0 0 35 0l166.9-167a24.7 24.7 0 0 0 0-34.9"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Open Source" role="img"
+                viewBox="0 0 512 512"><path fill="#3da639" stroke="#1d531d" stroke-width="14" stroke-linejoin="round" d="M192 430a180 180 0 1 1 128 0l-40-109a63 63 0 1 0-87-58c0 26 16 49 39 58z"/></svg></i>
+            </a>
+          </li>
           </ul>
           <p class="lead mb-5 text-white">I am a front-end software developer who truly enjoys
 what they do. I am happily married to my beautiful wife Krista and we live in the quiet town of Sherwood, OR.</p>
