--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
             <a class="social-link text-white mr-3">
               <i>
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-aria-label="Raspberry Pi" role="img"
-viewBox="0 0 512 512" fill="#c51a4a"><rect
-width="512" height="512"
-rx="15%"
-fill="#fff"/><g transform="scale(2)"><g id="a"><path fill="#000" d="M129 63c-8-20-15-19-20-19-4-5-9-3-13-2-5-3-9-2-12 0-3-3-8-1-9 2-6-2-8 1-9 2-9-1-8 8-7 9-1 1-3 6 0 9-2 4 1 7 3 8-2 4 3 8 5 8 0 5 4 8 7 8-1 4 9 7 9 7-21 9-18 32-18 32-29 21-7 46-7 46s5 35 24 39c3 5 21 11 21 11s7 11 26 11"/><path fill="#6cc04a" d="M74 52l-4-4 12 2-3-4 9 3-2-4 9 4v-4l9 6v-5l8 7 v-4c22 22 4 29 4 29C99 64 79 58 79 58s26 13 35 24c0 0-4 15-30 9l3-3-9-2 3-2-9-4h6l-9-6h6l-9-6h5l-8-6l5-2l-5-7"/><path d="M69 133c-19 9-9 34-3 37s15-42 3-37m35-34c7 2-30 32-31 26 0-18 9-28 31-26m-5 65c-29-3-19-44 6-44s22 44-6 44m-26 8c-9 6 3 43 26 35 9-7-8-43-26-35"/></g><use xlink:href="#a" transform="matrix(-1 0 0 1 256 0)"/><path d="M106 216c17 24 45 5 44-2s-39-9-44 2m45-35c0-28-45-27-45 0s43 28 45 0m-43-75c5-15 34-15 40-1s-37 19-40 1"/></g></svg></i>
+                  aria-label="Raspberry Pi" role="img"
+                  viewBox="0 0 512 512" fill="#c51a4a"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#fff"/><g transform="scale(2)"><g id="a"><path fill="#000" d="M129 63c-8-20-15-19-20-19-4-5-9-3-13-2-5-3-9-2-12 0-3-3-8-1-9 2-6-2-8 1-9 2-9-1-8 8-7 9-1 1-3 6 0 9-2 4 1 7 3 8-2 4 3 8 5 8 0 5 4 8 7 8-1 4 9 7 9 7-21 9-18 32-18 32-29 21-7 46-7 46s5 35 24 39c3 5 21 11 21 11s7 11 26 11"/><path fill="#6cc04a" d="M74 52l-4-4 12 2-3-4 9 3-2-4 9 4v-4l9 6v-5l8 7 v-4c22 22 4 29 4 29C99 64 79 58 79 58s26 13 35 24c0 0-4 15-30 9l3-3-9-2 3-2-9-4h6l-9-6h6l-9-6h5l-8-6l5-2l-5-7"/><path d="M69 133c-19 9-9 34-3 37s15-42 3-37m35-34c7 2-30 32-31 26 0-18 9-28 31-26m-5 65c-29-3-19-44 6-44s22 44-6 44m-26 8c-9 6 3 43 26 35 9-7-8-43-26-35"/></g><use xlink:href="#a" transform="matrix(-1 0 0 1 256 0)"/><path d="M106 216c17 24 45 5 44-2s-39-9-44 2m45-35c0-28-45-27-45 0s43 28 45 0m-43-75c5-15 34-15 40-1s-37 19-40 1"/></g></svg></i>
             </a>
           </li>
           <li class="list-inline-item">
@@ -192,7 +192,7 @@ fill="#fff"/><g transform="scale(2)"><g id="a"><path fill="#000" d="M129 63c-8-2
 what they do. I am happily married to my beautiful wife Krista and we live in the quiet town of Sherwood, OR.</p>
           <p class="lead mb-5 text-white">
 Currently searching for entry-level / junior software and web (UX / UI)
-development positions in the Portland Metropolitan Area.</p>
+development positions in Vancouver, WA and the Portland Metropolitan Area.</p>
 
           <p class="lead mb-5 text-white">Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery,
 React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, APIs,
